[package]
name = "s3find"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
version = "0.8.2"
description = """
A command line utility to walk an Amazon S3 hierarchy.
s3find is an analog of find for Amazon S3.
"""
documentation = "https://github.com/AnderEnder/s3find-rs"
homepage = "https://github.com/AnderEnder/s3find-rs"
repository = "https://github.com/AnderEnder/s3find-rs"
keywords = [
    "find",
    "aws",
    "s3",
    "pattern",
    "regex",
]
categories = ["command-line-utilities"]
license = "BSD-2-Clause"
exclude = [
    ".travis.yml",
    "ci/*",
]
build = "build.rs"
edition = "2018"

[[bin]]
name = "s3find"
path = "src/bin/s3find.rs"

[badges]
travis-ci = { repository = "AnderEnder/s3find-rs"}
codecov = { repository = "AnderEnder/s3find-rs" }

[dependencies]
structopt = "0.3"
glob = "0.3"
regex = "1"
anyhow = "1"
thiserror = "2"
chrono = "0.4"
futures = "0.3"
indicatif = "0.17"
humansize = "2"
itertools = "0.14"
tokio = { version = "1", features=["full"] }
async-trait = "0.1"
aws-types = "1.3"
aws-config = "1.5.8"
aws-sdk-s3 = "1"
aws-smithy-types = "1.3"

[dependencies.clap]
version = "4"
default-features = false
features = [ "suggestions", "color" ]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
version_check = "0.9"
structopt = "0.3"
clap = "4"
glob = "0.3"
regex = "1"
anyhow = "1"
thiserror = "2"
aws-types = "1.3"

[profile.release]
lto = "fat"
codegen-units = 1
