[package]
name = "s3find"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
version = "0.9.0"
description = """
A command line utility to walk an Amazon S3 hierarchy.
s3find is an analog of find for Amazon S3.
"""
documentation = "https://github.com/AnderEnder/s3find-rs"
homepage = "https://github.com/AnderEnder/s3find-rs"
repository = "https://github.com/AnderEnder/s3find-rs"
keywords = ["find", "aws", "s3", "pattern", "regex"]
categories = ["command-line-utilities"]
license = "BSD-2-Clause"
exclude = [".travis.yml", "ci/*"]
edition = "2024"

[[bin]]
name = "s3find"
path = "src/bin/s3find.rs"

[badges]
travis-ci = { repository = "AnderEnder/s3find-rs" }
codecov = { repository = "AnderEnder/s3find-rs" }

[dependencies]
glob = "0.3"
regex = "1"
anyhow = "1"
thiserror = "2"
chrono = "0.4"
futures = "0.3"
indicatif = "0.17"
humansize = "2"
itertools = "0.14"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
aws-types = "1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
aws-smithy-async = "1"
aws-smithy-runtime-api = "1"

[dependencies.clap]
version = "4"
default-features = false
features = ["suggestions", "color", "derive", "std", "usage", "help", "env"]

[dev-dependencies]
aws-smithy-runtime = { version = "1", features = ["test-util"] }
tempfile = "3"
http = "1"

[build-dependencies]
version_check = "0.9"
thiserror = "2"
glob = "0.3"
regex = "1"
anyhow = "1"
aws-types = "1"
clap_complete = "4"

[build-dependencies.clap]
version = "4"
default-features = false
features = ["suggestions", "color", "derive", "std", "usage", "help", "env"]

[profile.release]
lto = "fat"
codegen-units = 1
