[package]
name = "s3find"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
version = "0.13.0"
description = """
A command line utility to walk an Amazon S3 hierarchy.
s3find is an analog of find for Amazon S3.
"""
documentation = "https://github.com/AnderEnder/s3find-rs"
homepage = "https://github.com/AnderEnder/s3find-rs"
repository = "https://github.com/AnderEnder/s3find-rs"
keywords = ["find", "aws", "s3", "pattern", "regex"]
categories = ["command-line-utilities"]
license = "BSD-2-Clause"
exclude = [".gitignore", ".github", "codecov.yml"]
edition = "2024"

[[bin]]
name = "s3find"
path = "src/bin/s3find.rs"

[badges]
codecov = { repository = "AnderEnder/s3find-rs" }
github-actions = { repository = "AnderEnder/s3find-rs", label = "CI" }

[dependencies]
glob = "0.3"
regex = "1"
anyhow = "1"
thiserror = "2"
chrono = "0.4"
futures = "0.3"
indicatif = "0.18"
humansize = "2"
itertools = "0.14"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-types = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
aws-smithy-async = "1"
aws-smithy-runtime-api = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
lazy_static = "1"

[dev-dependencies]
aws-smithy-runtime = { version = "1", features = ["test-util"] }
tempfile = "3"
http = "1"

[build-dependencies]
version_check = "0.9"
thiserror = "2"
glob = "0.3"
regex = "1"
anyhow = "1"
aws-types = "1"
clap_complete = "4"
aws-sdk-s3 = "1"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
